--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,13 @@ plugins {
 }
 repositories {
 	mavenCentral()
+	maven {
+		name 'm2-dv8tion'
+		url 'https://m2.dv8tion.net/releases'
+	}
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_16
 targetCompatibility = JavaVersion.VERSION_16
 
 group = "net.wb1016"
@@ -41,24 +45,24 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	implementation ('net.dv8tion:JDA:4.2.1_266') {
+	implementation ("net.dv8tion:JDA:${project.jda_version}") {
 		exclude module: 'opus-java'
 	}
 
-	include ('net.dv8tion:JDA:4.2.1_266') {
+	include ("net.dv8tion:JDA:${project.jda_version}") {
 		exclude module: 'opus-java'
 	}
-	include "net.sf.trove4j:trove4j:3.0.3"
-	include 'org.slf4j:slf4j-nop:1.7.25'
-	include 'org.slf4j:slf4j-api:1.7.25'
-	include 'org.apache.commons:commons-collections4:4.1'
-	include 'com.neovisionaries:nv-websocket-client:2.14'
-	include 'com.squareup.okhttp3:okhttp:3.14.9'
-	include 'com.squareup.okio:okio:1.17.2'
-	include 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
-	include 'com.fasterxml.jackson.core:jackson-annotations:2.10.1'
-	include 'com.fasterxml.jackson.core:jackson-core:2.10.1'
-	include "org.json:json:20210307"
+	include "net.sf.trove4j:trove4j:${project.trove4j_version}"
+	include "org.slf4j:slf4j-nop:${project.slf4j_version}"
+	include "org.slf4j:slf4j-api:${project.slf4j_version}"
+	include "org.apache.commons:commons-collections4:${project.commons_collections4_version}"
+	include "com.neovisionaries:nv-websocket-client:${project.nv_websocket_client_version}"
+	include "com.squareup.okhttp3:okhttp:${project.okhttp_version}"
+	include "com.squareup.okio:okio:${project.okio_version}"
+	include "com.fasterxml.jackson.core:jackson-databind:${project.jackson_version}"
+	include "com.fasterxml.jackson.core:jackson-annotations:${project.jackson_version}"
+	include "com.fasterxml.jackson.core:jackson-core:${project.jackson_version}"
+	include "org.json:json:${project.json_version}"
 }
 
 minecraft {}
