--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,13 @@ yarn_mappings=1.17+build.13
 loader_version=0.11.6
 
 fabric_version=0.35.2+1.17
+
+jda_version=4.2.1_253
+trove4j_version=3.0.3
+slf4j_version=1.7.31
+commons_collections4_version=4.4
+nv_websocket_client_version=2.14
+okhttp_version=3.14.9
+okio_version=1.17.4
+jackson_version=2.12.3
+json_version=20210307
