--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,25 @@
-name: On Push
+name: Build
 
-on:
-  push:
-    branches: [ master ]
+on: [push]
 
 jobs:
-  build_and_release:
-    name: Build (and Release)
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
+    if: "!(contains(github.event.head_commit.message, 'ci skip') || contains(github.event.head_commit.message, 'skip ci'))"
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 16
-        uses: actions/setup-java@v1
-        with:
-          java-version: 16
-#      - name: Clean Gradle
-#        run: ./gradlew clean --refresh-dependencies --stacktrace
-      - name: Build
-        run: ./gradlew clean build
-      - name: Publish to Curseforge
-        run: ./gradlew curseforge
-        if: "contains(github.event.head_commit.message, '[release]')"
-        env:
-          CURSEKEY: ${{ secrets.CURSEKEY }}
-      - name: Publish to Modrinth
-        run: ./gradlew publishModrinth
-        if: "contains(github.event.head_commit.message, '[release]')"
-        env:
-          MODRINTHKEY: ${{ secrets.MODRINTHKEY }}
+    - uses: actions/checkout@v2.2.0
+    - uses: joschi/setup-jdk@v2.3.0
+      with:
+        java-version: '16' # The OpenJDK version to make available on the path
+        architecture: 'x64' # defaults to 'x64'
+    - run: |
+          chmod +x ./gradlew
+          chmod +x ./curse_upload
+          ./gradlew build
+          ./curse_upload
+      env:
+        CURSE_API_KEY: ${{ secrets.CURSE_API_KEY }}
+    - uses: actions/upload-artifact@v2
+      with:
+        name: build-artifacts
+        path: build/libs/
