--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,14 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx4096M
-org.gradle.parallel=true
-mod_version=1
+org.gradle.jvmargs=-Xmx8G
 
 minecraft_version=1.17
 yarn_mappings=1.17+build.13
 loader_version=0.11.6
 
-fabric_version=0.35.2+1.17
+#Fabric api
+fabric_version=0.36.0+1.17
 
-jda_version=4.2.1_253
-trove4j_version=3.0.3
-slf4j_version=1.7.31
-commons_collections4_version=4.4
-nv_websocket_client_version=2.14
-okhttp_version=3.14.9
-okio_version=1.17.4
-jackson_version=2.12.3
-json_version=20210307
+# Mod Properties
+mod_version=1
+maven_group=net.wb1016
+archives_base_name=fdnotif
